add post put and delete user routes
